--- a/file.html
+++ b/file.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h3>hello new changes made</h3>
+    <h3>get my point</h3>
+  </body>
 </html>
